--- a/configurations/ruff.toml
+++ b/configurations/ruff.toml
@@ -1,3 +1,3 @@
-[per-file-ignores]
+[lint.per-file-ignores]
 # Ignore `F401` (imported but unused) in all `__init__.py` files
 "__init__.py" = ["F401"]
